assets/css/layout/footer.css
.Footer {
  position: relative;
  padding: var(--vb) 0;
  background-image: linear-gradient(to right, rgb(238 244 248), rgb(251 243 248));
}

.Footer__inner {
  display: flex;
  font-size: 80%;
  margin: 0 -var(--vb-2\/3);
}

.Footer__left {
  width: 60%;
  padding: 0 1em;
}

.Footer__colophon {
  opacity: 0.9;
  font-size: 80%;
}

.Footer__right {
  width: 40%;
  padding: 0 1em;
}

.Footer__list {
  text-align: right;
  list-style: none;
}

.Footer__list > li {
  margin: 0;
}

@media (max-width: 768px) {
  .Footer {
    padding: var(--vb-1\/2) 0;
  }

  .Footer__inner {
    flex-direction: column;
  }

  .Footer__left,
  .Footer__right {
    width: 100%;
  }

  .Footer__list {
    text-align: center;
    padding: 0;
    margin: 0 0 var(--vb-2\/3);
  }

  .Footer__list > li {
    display: inline-block;
    margin: var(--vb-1\/6) 0;
    list-style: none;
  }

  .Footer__list > li:not(:last-of-type)::after {
    margin: 0 0.5ch;
    content: '·';
    color: var(--pink);
    font-family: monospace;
  }
}

